# MOUNTE-CRISTO

./: .gitignore  DOCUMENTATION.md  LatestCode.jsx  MUSICbars.jsx  README.md  Switching&SANDBOXsupport.jsx  capacitor.config.json  htmlRunSupport.jsx  index.html  index.jsx  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build-and-commit.yml  release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
public/: index.html
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
